Fixing overlay z-index, and fixing the remove item function

--- a/styles/style.css
+++ b/styles/style.css
@@ -74,6 +74,7 @@ select {
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 999;
 }
 
 .overlay > form {
